# codefeatrue

./: .gitignore  README.md  __init__.py  config.py  config.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
adapter/: lark.py  onebot11.py
data/: user.json
docs/: debug.md
plugins/: __init__.py
plugins/bilibili/: __init__.py
plugins/github/: __init__.py
plugins/hust_eat/: __init__.py  data.py  format.py
plugins/hust_mirror/: __init__.py
plugins/invite/: __init__.py
plugins/oseddl/: __init__.py
